tests/ui/recursion_limit/empty.stderr
error: `limit` must be a non-negative integer
  --> $DIR/empty.rs:3:1
   |
LL | #![recursion_limit = ""]
   | ^^^^^^^^^^^^^^^^^^^^^--^
   |                      |
   |                      `limit` must be a non-negative integer

error: `limit` must be a non-negative integer
  --> $DIR/empty.rs:3:1
   |
LL | #![recursion_limit = ""]
   | ^^^^^^^^^^^^^^^^^^^^^--^
   |                      |
   |                      `limit` must be a non-negative integer
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

